--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rishabh Verma",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
